--- a/react-app/src/components/Discover.css
+++ b/react-app/src/components/Discover.css
@@ -10,27 +10,24 @@ a{
     font-size: large;
 }
 
-.discover-title-div{
+.discover-title-div, .matches-title-div{
     background-color: #1a1a1a;
     width: 100%;
-    height: 200px;
+    height: 100px;
     transition: .1s background-color
-
 }
 
-.discover-title-div:hover {
+.discover-title-div,.matches-title-div:hover {
     background-color:rgb(20, 20, 20);
 }
 
-.discover-title {
+.discover-title,.matches-title {
     color: white;
     font-family: 'Roboto', sans-serif;
-    text-align: center;
+    text-align: left;
     position: relative;
-    top: 35%;
-    right: 5%;
-    font-size: 40px;
-
+    padding-top: 40px;
+    padding-left: 30%;
 }
 
 .discover-like {
@@ -81,7 +78,7 @@ display: inline-flex;
     background-color: black;
 }
 
-.discover-title-footer {
+.discover-title-footer, .matches-title-footer{
     color: white;
     background-color: #333;
     letter-spacing: 1.5px;
@@ -90,7 +87,7 @@ display: inline-flex;
     font-weight: 900;
     position: relative;
     width: 100%;
-    height: 50px;
+    height: 30px;
     border: 1px solid #666;
     text-align: center;
 
@@ -98,60 +95,47 @@ display: inline-flex;
 
 .discover-div{
     border: 1px solid rgba(100, 100, 111, 0.2);
-    display:grid;
+    /* display:grid; */
     margin: 0;
     width: 50%;
-    height: 500px;
+    min-width: 700px;
+    height: 70%;
+    min-height: 500px;
     border-radius: 5px;
     margin: 1%;
     padding: 1%;
     position: relative;
     left: 25%;
     top: 10px;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     padding: 2%;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     background-color: white;
 }
 
-.discover-images {
-    width:fit-content;
-    height:300px;
-    width: 400px;
-    object-fit:fill;
-    margin-bottom: 4%;
-    border: 1px solid #ccc;
-
+.discover-top{
+    border: 2px solid blue;
+    /* display: flex;
+    justify-content: center; */
 }
 
-.discover-images:hover{
-    box-shadow: rgba(100, 100, 111, 0.527) 0px 7px 29px 0px;
-    border-radius: 5px;
+.discover-top-left{
+    width: 50%;
+    position: relative;
 }
 
 .discover-name{
     text-align: left;
-    margin-bottom: 1%;
-    width:fit-content;
-    font-size: 20px;
+    margin-left: 4%;
+    margin-top: 2%;
+    font-size: 30px;
 }
 
 .discover-gender{
     color: gray;
-    font-size: 14px;
-    width: fit-content;
-}
-
-.discover-heart,
-.discover-x {
-    margin-right: 3.5%;
-    margin-left: -5.5%;
-}
-
-
-
-.fa-magnifying-glass{
-    margin-right: 1%
+    font-size: 16px;
+    margin-left: 5%;
+    margin-bottom: 5%;
 }
 
 .match-percentage{
@@ -163,11 +147,41 @@ display: inline-flex;
     font-size: 15px;
     font-weight: bolder;
     background-color: white;
-    position: relative;
-    margin-left: 350px;
-    bottom: 50px;
+    position: absolute;
+    margin-left: 75%;
+    bottom: 20%;
+}
+
+.img-bio-wrapper{
+    width: 50%;
+    border: 1px solid red;
+}
+
+.discover-images {
+    /* min-height:300px;
+    min-width: 400px; */
+    object-fit:cover;
+    margin-bottom: 4%;
+    border: 1px solid #ccc;
 
 }
+
+.discover-images:hover{
+    box-shadow: rgba(100, 100, 111, 0.527) 0px 7px 29px 0px;
+    border-radius: 5px;
+}
+
+.discover-heart,
+.discover-x {
+    margin-right: 3.5%;
+    margin-left: -5.5%;
+}
+
+.fa-magnifying-glass{
+    margin-right: 1%
+}
+
+
 
 .bio-discover-title-div{
     background-color:#1a1a1a;
@@ -199,12 +213,9 @@ display: inline-flex;
     width: 400px;
 }
 
-img-bio-wrapper{
-    display: inline-flex;
-}
-
 .discover-navlink{
-    width:fit-content;
+    /* width:fit-content; */
+    border: 1px solid red;
 }
 
 .discover-main{
