--- a/react-app/src/components/Discover.css
+++ b/react-app/src/components/Discover.css
@@ -30,54 +30,6 @@ a{
     padding-left: 30%;
 }
 
-.discover-like {
-    background-color: #e00095;
-    border: 2px solid #e00095;
-    color: white;
-    padding: 2%;
-    padding-top: 2.5%;
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 25px;
-    width: 30%;
-    margin-left: 2%;
-    cursor: pointer;
-}
-
-.discover-buttons {
-width: 50%;
-position: absolute;
-left: 61%;
-bottom: 420px;
-display: inline-flex;
-}
-
-.discover-like:hover {
-    color: rgb(24, 24, 24);
-    background-color: rgba(255, 161, 235, 0.562);
-    border: rgba(255, 161, 235, 0.562);
-}
-
-.discover-pass {
-    background-color: white;
-    border: 2px solid black;
-    color: black;
-    padding: 2%;
-    padding-top: 2.5%;
-    font-size: 20px;
-    font-weight: bold;
-    text-align: left;
-    text-indent: 16.5px;
-    border-radius: 25px;
-    width: 30%;
-    cursor: pointer;
-}
-
-.discover-pass:hover {
-    color: white;
-    background-color: black;
-}
-
 .discover-title-footer, .matches-title-footer{
     color: white;
     background-color: #333;
@@ -101,6 +53,7 @@ display: inline-flex;
     min-width: 700px;
     height: 70%;
     min-height: 500px;
+    max-height: 300px;
     border-radius: 5px;
     margin: 1%;
     padding: 1%;
@@ -114,20 +67,23 @@ display: inline-flex;
 }
 
 .discover-top{
-    border: 2px solid blue;
-    /* display: flex;
-    justify-content: center; */
+    display: flex;
+    justify-content: center;
 }
 
 .discover-top-left{
     width: 50%;
     position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .discover-name{
     text-align: left;
     margin-left: 4%;
-    margin-top: 2%;
+    margin-top: 5%;
+    margin-bottom: 3%;
     font-size: 30px;
 }
 
@@ -149,21 +105,65 @@ display: inline-flex;
     background-color: white;
     position: absolute;
     margin-left: 75%;
-    bottom: 20%;
+    bottom: 25%;
+}
+
+.discover-buttons {
+    width: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    }    
+
+.discover-like,.discover-pass{
+    padding: 2%;
+    padding-top: 2.5%;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 35px;
+    width: 40%;
+    height: 60px;
+    cursor: pointer;
+    margin: 2%;
+}
+.discover-like {
+    background-color: #e00095;
+    border: 2px solid #e00095;
+    color: white;
+}
+
+.discover-like:hover {
+    color: rgb(24, 24, 24);
+    background-color: rgba(255, 161, 235, 0.562);
+    border: rgba(255, 161, 235, 0.562);
+}
+
+.discover-pass {
+    background-color: white;
+    border: 2px solid black;
+    color: black;
+}
+
+.discover-pass:hover {
+    color: white;
+    background-color: black;
 }
 
 .img-bio-wrapper{
-    width: 50%;
-    border: 1px solid red;
+    width: 98%;
+    height: 300px;
+    margin-left: 1%;
+    margin-top: 2%;
+    display: flex;
+    /* border: 1px solid red; */
 }
 
 .discover-images {
-    /* min-height:300px;
-    min-width: 400px; */
+    height: 295px;
+    width: 100%;
     object-fit:cover;
-    margin-bottom: 4%;
+    margin: 2px 2px 0px 0px;
     border: 1px solid #ccc;
-
 }
 
 .discover-images:hover{
@@ -173,15 +173,12 @@ display: inline-flex;
 
 .discover-heart,
 .discover-x {
-    margin-right: 3.5%;
-    margin-left: -5.5%;
+    margin-right: 8%;
 }
 
 .fa-magnifying-glass{
     margin-right: 1%
 }
-
-
 
 .bio-discover-title-div{
     background-color:#1a1a1a;
@@ -190,7 +187,6 @@ display: inline-flex;
     border-top-right-radius: 5px;
     position: relative;
     margin-left: 10%;
-    width: 400px;
 }
 
 .bio-discover-title{
@@ -205,17 +201,16 @@ display: inline-flex;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     position: relative;
-    height: 260px;
+    height: 100%;
     padding: 5%;
     font-family: 'Roboto', sans-serif;
     font-weight: bolder;
     margin-left: 10%;
-    width: 400px;
+
 }
 
 .discover-navlink{
-    /* width:fit-content; */
-    border: 1px solid red;
+    width: 60%;
 }
 
 .discover-main{
@@ -226,18 +221,16 @@ display: inline-flex;
     min-width: 100%;
     height: 100%;
     padding-top: 200px;
-
-
 }
 
 .bio-discover-wrapper{
     display: inline-flex;
     flex-direction:column;
-    width: 400px;
+    width: 100%;
 }
 
 .img-bio-wrapper{
-    display: inline-flex
+    display: inline-flex;
 }
 
 .view-profile {
