--- a/react-app/src/components/Questionnaire.css
+++ b/react-app/src/components/Questionnaire.css
@@ -4,7 +4,7 @@
     height: 98vh;
     overflow: hidden;
     margin-left: -8px;
-    margin-top: -8px;
+    margin-top: -5%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -20,6 +20,7 @@
     flex-direction: column;
     justify-content: center;
     font-size: 16px;
+    border: 1px solid red;
 }
 
 .question-number {
