--- a/react-app/src/components/Messages/Messages.css
+++ b/react-app/src/components/Messages/Messages.css
@@ -1,4 +1,5 @@
 .messages-container{
+    font-family: "Open Sans", sans-serif;
     position: fixed;
     flex-direction: column;
     top: 160px;
@@ -14,16 +15,18 @@
     background-color: white;
     /* border: 1px solid blue */
     box-sizing: border-box;
+    overflow: auto;
+    overflow-wrap: break-word;
 }
 
 .messages-listed{
+    /* background-color:#e5f1f7; */
     width: 100%;
     height: 78%;
-
     background-size: contain;
-    background-image: url('../../images/pikabkg.jpeg');
     overflow-y: scroll;
-    border: 1px solid green;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
 }
 
 .chat-message-ctrl{
@@ -51,33 +54,43 @@
     align-items: center;
 }
 
+.chat-edit-div{
+    width: 100%;;
+}
+
 .save-msg,.cancel-save-msg,.edit-msg,.delete-msg{
-    width: 22px;
-    height: 22px;
+    width: 24px;
+    height: 24px;
     text-align: center;
     margin-right: 5px;
-    border: 1px solid rgb(108, 191, 255);
+    border: 1px solid #98e3e7;
     background: white;
     border-radius: 5px;
-    color: rgb(108, 191, 255);
+    color: #98e3e7;
     padding: 5px;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 13px;
     transition: 0.3s;
     display: inline-block;
     text-decoration: none;
 }
 
+.save-msg:hover,.cancel-save-msg:hover,.edit-msg:hover,.delete-msg:hover{
+    border: 1px solid white;
+    background: #98e3e7;
+    border-radius: 5px;
+    color: white;
+}
+
 .chat-input-ctrl{
-    margin-top: 2%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     /* border: 1px solid red; */
     top: 250px;
     left:-180px;
-    width: 90%;
-    height: 10%;
+    width: 100%;
+    height: 12%;
 }
 
 .chat-countdown{
@@ -87,9 +100,8 @@
 .chat-input,.chat-div-input{
     border: 1px solid grey;
     margin-top: 10px;
-    border-radius: 20px;
     width: 75%;
-    height: 60%;
+    height: 80%;
 }
 
 .chat-avatar {
@@ -159,16 +171,21 @@ cursor: pointer;
 color: #ff0051;
 }
 
-
-.chatMessageUser{
-    background-color: #cce1ff;
-    border-radius: 24px 24px 24px 4px;
-    padding: 15px;
-    margin: 10px 0px;
-}
 .chatMessageOther{
-    background-color: #d8dfe9;
+    background-color: #8d9799;
+    letter-spacing: .4px;
+    color: white;
+    border-radius: 20px 20px 20px 4px;
+    padding: 12px;
+    margin: 10px 10px 10px 5px;
+    width: 330px;
+}
+.chatMessageUser{
+    background-color: #78bcca;
+    letter-spacing: .4px;
+    color: white;
     border-radius: 24px 24px 24px 4px;
-    padding: 15px;
-    margin: 10px 0px;
+    padding: 12px;
+    margin: 10px 10px 10px 5px;
+    width: 330px;
 }
