--- a/react-app/src/components/Messages/Messages.css
+++ b/react-app/src/components/Messages/Messages.css
@@ -126,6 +126,7 @@
     border-radius: 50%;
     font-size: 16px;
     cursor: pointer;
+    margin-right: 3%;
     /* border: 1px solid rgb(175, 175, 175); */
 }
 
