--- a/react-app/src/components/Messages/Messages.css
+++ b/react-app/src/components/Messages/Messages.css
@@ -41,7 +41,7 @@
 .chat-user-wrap{
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: flex-end;
     padding: 3% 1% 3% 3%;
 }
 
@@ -49,7 +49,7 @@
     padding: 2%;
     font-weight: bold;
     align-self: flex-end;
-    
+
 }
 
 .chat-content-options{
